@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-28T01:00:17Z",
+  "timestamp" : "2023-09-28T08:17:26Z",
   "count_outdated" : 851,
   "uniques_outdated" : 501,
-  "count" : 883,
-  "uniques" : 519,
+  "count" : 884,
+  "uniques" : 520,
   "clones" : [
     {
       "timestamp": "2023-09-15T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
