@@ -1,5 +1,5 @@
 {
-  "count": 32,
+  "count": 33,
   "uniques": 2,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
